# SSX

./: .gitignore  README.md  setup.sh
CMSSW/: setupCMSSW.sh
CMSSW/UserCode/ElectronRegressionUncertainties/plugins/: BuildFile.xml  ElectronRegressionUncertainties.cc
CMSSW/UserCode/EventInfoCollector/plugins/: EventInfoCollector.cc
CMSSW/UserCode/NJettines/plugins/: NJettines.cc
CMSSW/UserCode/ParticleLevelTools/: BuildFile.xml
CMSSW/UserCode/ParticleLevelTools/interface/: Jet.h  Utils.h
CMSSW/UserCode/ParticleLevelTools/plugins/: BHadronSelector.cc  BuildFile.xml  JetClustering.cc  METProducer.cc  PackedGenParticleProjection.cc  PackedGenParticleSelector.cc  SimpleProjection.h
CMSSW/UserCode/ParticleLevelTools/src/: Jet.cc  classes.h  classes_def.xml
CMSSW/crab/: divideByInstLumi.py  getPU.sh  main.py  resubmit.sh  status.sh  submit.sh
CMSSW/sync/: countEventWeight.py  mtwSelection.py  sync.xml  syncEle.xml  syncMu.xml
PxlModules/: CMakeLists.txt  FindPXL.cmake
PxlModules/internal/: CMakeLists.txt
PxlModules/internal/TMVA/src/: MethodFDA.cxx  RuleFitParams.cxx
PxlModules/internal/tinyxml2/: CMakeLists.txt
PxlModules/python/pymodule/: neutrinoMatcher.py  topBMatcher.py
PxlModules/reconstruction/: CMakeLists.txt  EventVariables.cpp  NeutrinoPz.cpp  NeutrinoPzSolver.hpp  PartonLevelReconstruction.cpp  TTbarPartonLevelReconstruction.cpp  TopReconstruction.cpp  angles.h
PxlModules/scripts/: CMakeLists.txt
PxlModules/scripts/evaluateTMVA/: CMakeLists.txt  evaluateTMVA.cc
PxlModules/selection/: BTagSelection.cpp  CMakeLists.txt  ElectronSelection.cpp  ElectronVeto.cpp  JetSelection.cpp  MuonSelection.cpp  MuonVeto.cpp  PLObjects.cpp  PLSelection.cpp  TriggerSelection.cpp  isolation.h
PxlModules/systematics/: BFragWeight.cpp  BTagReweighting.cpp  BTagWeightCalculator.hpp  CMakeLists.txt  ElectronSF.cpp  JetMETVariations.cpp  MuonSF.cpp  PDFEnvelope.cpp  SFReader.hh  TopPtReweighting.cpp
PxlModules/utils/: CMakeLists.txt  Duplicator.cpp  EventWeight.cpp  Flag.cpp  JetCategory.cpp  LumiInfo.cpp  LumiMask.cpp  Matching.cpp  OutputStore.cpp  OutputStore.hpp  PileUpReweighting.cpp  PxlParser.hpp  RootTree.cpp  RootTree.hpp  RootTreeWriter.cpp  RootTreeWriter2.cpp  SlimParticleLevelObjects.cpp  Splitter.cpp  SubAnalysis.cpp  Variable.hpp
analysis/: analyzeTauDecays.xml  applyTriggers.xml  applyWeights.xml  btaggingMCEff.py  eleSelection.xml  muonSelection.xml  outputVariables.txt  outputVariablesFit.txt  outputVetoVariables.txt  processBackgroundEle.xml  processBackgroundMu.xml  processDataEle.xml  processDataMu.xml  processPU.xml  processSignalEle.xml  processSignalEleGen.xml  processSignalMu.xml  processSignalMuGen.xml  reconstructionBackground.xml  reconstructionData.xml  reconstructionSignal.xml  runPartonParticleLevel.xml  runReconstruction.xml  selectionBackground.xml  selectionData.xml  selectionSignal.xml
analysis/BDT_tchan/: TMVATraining.py  TMVAsubmit.py
analysis/BDT_ttw/: TMVATraining.py  TMVAsubmit.py
analysis/unfolding/: driver.py  makeAsymTable.py  makeSysTable.py  makeSysTable2.py  makeSysYaml.py
analysis/unfolding/defaultModules/: Asymmetry.py  Drawing.py  Files.py  Module.py  Plots.py  Program.py  Response.py  Samples.py  ThetaFit.py  ThetaModel.py  Unfolding.py  Utils.py
analysis/unfolding/jobs/: makeFitHistograms.py  makeFitHistograms.sh  makePlotHistograms.py  makePlotHistograms.sh  makeResponseHistograms.py  makeResponseHistograms.sh  makeResponsePDFHistograms.py  makeResponsePDFHistograms.sh  runDists.sh  runFitsAll.sh  runFitsProfiled.sh  runFitsProfiledChannel.sh  runFitsSingle.sh  runFitsSingleChannel.sh  runPlots.sh  runPlotsAll.sh  runSmooth.sh  runSysCheck.sh  runUnfolding.sh  runUnfoldingAll.sh  runUnfoldingSingle.sh  runUnfoldingSingleChannel.sh
analysis/unfolding/setup/: LeptonEtaParticle.py  LeptonEtaParton.py  LeptonPtParticle.py  LeptonPtParton.py  TopCosParticle.py  TopCosParton.py  TopPtParticle.py  TopPtParton.py  TopYParticle.py  TopYParton.py  WCosParticle.py  WCosParton.py  WPtParticle.py  WPtParton.py  Wjets.py
analysis/unfolding/systematics/: bfracCentral.py  bfracDown.py  bfracPeterson.py  bfracUp.py  btagDown.py  btagUp.py  dyDown.py  dyUp.py  eleEffDown.py  eleEffUp.py  eleMultiDown.py  eleMultiIsoDown.py  eleMultiIsoUp.py  eleMultiUp.py  eleMultiVetoDown.py  eleMultiVetoUp.py  enDown.py  enUp.py  lheWeight.py  ltagDown.py  ltagUp.py  muEffDown.py  muEffUp.py  muMultiDown.py  muMultiUp.py  pdfDown.py  pdfUp.py  puDown.py  puUp.py  resDown.py  resUp.py  tchHdampPSDown.py  tchHdampPSUp.py  tchanHdampPSDown.py  tchanHdampPSUp.py  tchanScalePSDown.py  tchanScalePSUp.py  tchanScaleTmpl.py  topMassDown.py  topMassUp.py  (+17 more)
analysis/unfolding/tasks/: checkSys.py  getFitResult.py  incCrossSection.py  makeFileDict.py  makeFitHistograms.py  makeFitMarginalized.py  makeFitSingle.py  makeGenHistograms.py  makeHistSmooth.py  makePlotHistograms.py  makeResponseHistograms.py  makeUnfolding.py  makeUnfoldingBiasCheck.py  makeUnfoldingSingle.py  plotCrossSection.py  plotDistribution.py
scripts/: getEventWeightFromInfo.py  getPUHistFromInfo.py  makeEvaluateJobs.py  plotBtagEff.py  pxlmultirun.py  pxlmultirun3.py  pxlmultirunFailed.py  slurm_cfg.tmpl
scripts/PyTool/: CMakeLists.txt  PyFit.hpp  PyUnfold.hpp  PyUtils.hpp  pyfit.py  testPyFit.py  testPyUnfold.py
(+3 files in other folders)
