CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (pxlmodules)
ADD_DEFINITIONS(-std=c++0x)
#ADD_DEFINITIONS(-Wall)
#ADD_DEFINITIONS(-Wextra)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}")
FIND_PACKAGE(PXL REQUIRED)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} SYSTEM ${PXL_INCLUDE_DIR})

add_subdirectory(selection)
add_subdirectory(utils)
add_subdirectory(reconstruction)
add_subdirectory(internal)
add_subdirectory(systematics)
add_subdirectory(scripts)
